completed saving button listenter and saving to localStorage

--- a/index.html
+++ b/index.html
@@ -23,12 +23,12 @@
         <!-- Timeblocks go here -->
 
         <div class="time-block ">
-            <p class="hour">9AM</p>
+            <p class="hour" value="9">9AM</p>
             <textarea class=""></textarea>
             <button class="saveBtn"> <i class="far fa-save"></i></button>
         </div>
         <div class="time-block">
-            <p class="hour">10AM</p>
+            <p class="hour" value="10">10AM</p>
             <textarea class=""></textarea>
             <button class="saveBtn"> <i class="far fa-save"></i></button>
         </div>
