completed load from localStorage if exists. Added functionality to remove plan

--- a/index.html
+++ b/index.html
@@ -23,13 +23,18 @@
         <!-- Timeblocks go here -->
 
         <div class="time-block ">
-            <p class="hour" value="9">9AM</p>
-            <textarea class=""></textarea>
+            <p class="hour" >9AM</p>
+            <textarea class="" time="9"></textarea>
             <button class="saveBtn"> <i class="far fa-save"></i></button>
         </div>
         <div class="time-block">
-            <p class="hour" value="10">10AM</p>
-            <textarea class=""></textarea>
+            <p class="hour" >10AM</p>
+            <textarea class="" time="10"></textarea>
+            <button class="saveBtn"> <i class="far fa-save"></i></button>
+        </div>
+        <div class="time-block">
+            <p class="hour" >11AM</p>
+            <textarea class="" time="11"></textarea>
             <button class="saveBtn"> <i class="far fa-save"></i></button>
         </div>
     </div>
