completed css and js code for functionality

--- a/index.html
+++ b/index.html
@@ -23,18 +23,48 @@
         <!-- Timeblocks go here -->
 
         <div class="time-block ">
-            <p class="hour" >9AM</p>
-            <textarea class="" time="9"></textarea>
+            <p class="hour">9AM</p>
+            <textarea class="description" time="9"></textarea>
             <button class="saveBtn"> <i class="far fa-save"></i></button>
         </div>
         <div class="time-block">
             <p class="hour" >10AM</p>
-            <textarea class="" time="10"></textarea>
+            <textarea class="description" time="10"></textarea>
             <button class="saveBtn"> <i class="far fa-save"></i></button>
         </div>
         <div class="time-block">
             <p class="hour" >11AM</p>
-            <textarea class="" time="11"></textarea>
+            <textarea class="description" time="11"></textarea>
+            <button class="saveBtn"> <i class="far fa-save"></i></button>
+        </div>          
+        <div class="time-block">
+            <p class="hour" >12AM</p>
+            <textarea class="description" time="12"></textarea>
+            <button class="saveBtn"> <i class="far fa-save"></i></button>
+        </div>
+        <div class="time-block">
+            <p class="hour">1PM</p>
+            <textarea class="description" time="13"></textarea>
+            <button class="saveBtn"> <i class="far fa-save"></i></button>
+        </div>
+        <div class="time-block">
+            <p class="hour" >2PM</p>
+            <textarea class="description" time="14"></textarea>
+            <button class="saveBtn"> <i class="far fa-save"></i></button>
+        </div>
+        <div class="time-block">
+            <p class="hour" >3PM</p>
+            <textarea class="description" time="15"></textarea>
+            <button class="saveBtn"> <i class="far fa-save"></i></button>
+        </div>
+        <div class="time-block">
+            <p class="hour" >4PM</p>
+            <textarea class="description" time="16"></textarea>
+            <button class="saveBtn"> <i class="far fa-save"></i></button>
+        </div>        
+        <div class="time-block">
+            <p class="hour" >5PM</p>
+            <textarea class="description" time="17"></textarea>
             <button class="saveBtn"> <i class="far fa-save"></i></button>
         </div>
     </div>
